--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -23,9 +23,9 @@
         <!--barra de tareas-->
         <nav class="navbar navbar-expand navbar-light bg-light">
             <div class="nav navbar-nav">
-                <a class="nav-item nav-link active" href="#" >Inicio</a>
-                <a class="nav-item nav-link active" href="#" >Libros</a>
-                <a class="nav-item nav-link active" href="#" >Nosotros</a>
+                <a class="nav-item nav-link active" href="{% url 'home' %}" >Inicio</a>
+                <a class="nav-item nav-link active" href="{% url 'revista'%}" >Revistas y Suscripciones</a>
+                <a class="nav-item nav-link active" href="{% url 'servicios' %}" >Nosotros</a>
             </div>
         </nav>
         
