--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a href="{% url 'login' %}" class="nav-link">Iniciar Sesión</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'revista'%}" class="nav-link">Revistas y Suscripciones</a>
+                    </li>
                 </ul>
             </div>
         </div>
