--- a/app/templates/revistas/crear.html
+++ b/app/templates/revistas/crear.html
@@ -4,6 +4,19 @@
 
 {% block contenido %}
 
-Formulario para agregar nueva revista o suscripcion
+<div class="card">
+    <div class="card-header">Crear una suscripcion o una revista</div>
+    <div class="card-body">
+        <h4 class="card-title">Datos de la suscripcion o revista</h4>
+    <!--en esta parte incluiremos el formulario-->    
+        {% include 'revistas/form.html'%}
+        
+    </div>
+
+    <div class="card-footer text-muted">
+
+    </div>
+</div>
+
 
 {% endblock %}
