--- a/app/templates/revistas/index.html
+++ b/app/templates/revistas/index.html
@@ -5,7 +5,17 @@
 {% block contenido %}
 
 <div class="card">
-    <div class="card-header">Listar Suscripciones</div>
+    <div class="card-header">
+        <a
+            name=""
+            id=""
+            class="btn btn-success"
+            href="{% url 'crear' %}"
+            role="button"
+            >Agregar nueva revista o suscripcion</a
+        >
+        
+    </div>
     <div class="card-body">
         <h4 class="card-title">Suscripciones</h4>
         <div
