--- a/app/templates/revistas/index.html
+++ b/app/templates/revistas/index.html
@@ -34,11 +34,18 @@
                     </tr>
                 </thead>
                 <tbody>
+                    {% for suscripcion in suscripciones %}
                     <tr>
-                        <td>1</td>
-                        <td>revistas de animales</td>
-                        <td>imagen.jpg</td>
-                        <td>revistas que hablan sobre animales que viven en el continente africano</td>
+                        <td>{{ suscripcion.id }}</td>
+                        <td>{{ suscripcion.titulo }}</td>
+                        <td>
+                        <img src="{{ suscripcion.imagen.url }}" height="100">
+
+                            
+                        
+                        
+                        </td>
+                        <td>{{ suscripcion.descripcion }}</td>
                         <!--se esta creando un boton para editar-->
                         <td>
                         <a name="" id="" class="btn btn-info" href="{% url 'editar' %}" role="button">Editar</a>
@@ -47,6 +54,7 @@
                         <a name="" id="" class="btn btn-danger" href="#" role="button">Borrar</a>
                         </td>
                     </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
