--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -9,21 +9,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'css/register.css' %}">
-
 </head>
 <body>
-    <form method="post" action="{% url 'register' %}">
-        {% csrf_token %}
-        <img src="{% static 'imagenes/usuario.png' %}" alt="user-img">
-        <label for="username">Usuario</label>
-        <input type="text" id="username" name="username" placeholder="Ingresar nombre de usuario" required>
-        <label for="password1">Contraseña</label>
-        <input type="password" id="password1" name="password1" placeholder="Ingresar la Contraseña" required>
-        <label for="password2">Confirmar Contraseña</label>
-        <input type="password" id="password2" name="password2" placeholder="Confirmar la Contraseña" required>
-        <button type="submit" id="submit">Registrarse</button>
-        <a href="{% url 'login' %}" class="button-like">Volver al Inicio de Sesión</a>
-    </form>
+    <div class="container mt-5">
+        <form method="post" action="{% url 'register' %}" class="w-50 mx-auto">
+            {% csrf_token %}
+            {% for campo in formulario %}
+            <div class="mb-3">
+                <label for="" class="form-label">{{ campo.label }}</label>
+        
+                <input
+                    type="{{ campo.field.widget.input_type }}"
+                    class="form-control"
+                    name="{{ campo.name }}"
+                    id=""
+                    aria-describedby="helpId"
+                    placeholder="{{ campo.label }}"
+                    value="{{ campo.value  | default:'' }}"
+                />
+            </div>
+            <div class="col-12 help-text">{{ campo.error }}</div>
+            {% endfor x%}
+            <input
+                name=""
+                id=""
+                class="btn btn-success"
+                type="submit"
+                value="Registrar"
+                    />
+                    <a
+                    name=""
+                    id=""
+                    class="btn btn-primary"
+                    href="{% url 'home' %}"
+                    role="button"
+                    >Volver</a
+                >
+        </form>
+    </div>
     <script src="{% static 'js/login.js' %}"></script>
 </body>
 </html>
+
