--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -37,7 +37,7 @@
                         <div class="navbar-item">
                           <p>
                             Hello {{ request.user.first_name|default:request.user.username }}, 
-                            <a class="" href="{% url 'logout' %}">
+                            <a class="" href="{% url 'logins' %}">
                               <strong> Log out</strong>
                             </a>
                           </p>
