--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -137,7 +137,7 @@
                             <i class="bi bi-journal"></i>
                             <h3 class="card-title">Comprar revistas</h3>
                             <p class="lead">Adquiere nuestras últimas ediciones</p>
-                            <a href="{% url 'vista_del_carro' %}" class="btn bg-primary text-white">Comprar ahora</a>
+                            <a href="{% url 'tienda_y_carro' %}" class="btn bg-primary text-white">Comprar ahora</a>
                         </div>
                     </div>
                 </div>
