--- a/app/templates/revistas/editar.html
+++ b/app/templates/revistas/editar.html
@@ -8,7 +8,7 @@
     <div class="card-header">Editar informacion de la revista o suscripcion</div>
     <div class="card-body">
         <h4 class="card-title">Datos de la suscripcion o revista</h4>
-      
+    <!--en esta parte incluiremos el formulario-->    
         {% include 'revistas/form.html'%}
         
     </div>
