--- a/app/templates/revistas/index.html
+++ b/app/templates/revistas/index.html
@@ -51,10 +51,10 @@
                         <td>${{  suscripcion.precio }}</td>
                         <td>{{ suscripcion.descripcion }}</td>
                         
-                        
+                        <!--se esta creando un boton para editar-->
                         <td>
                         <a name="" id="" class="btn btn-info" href="{% url 'editar' suscripcion.id %}" role="button">Editar</a>
-                        
+                        <!--se esta creando un boton para borrar-->
                         |  
                         <a name="" id="" class="btn btn-danger" href="{% url 'eliminar' suscripcion.id %}" role="button">Borrar</a>
                         </td>
